removed espresso project file and update bootstrap to 3.1.1

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /*
-Theme Name: Twenty Thirteen
-Theme URI: http://wordpress.org/themes/twentythirteen
+Theme Name: Bootstrap 3.1.1 Starter Wordpress theme
 Author: the WordPress team
-Author URI: http://wordpress.org/
-Description: This is a blank bootstrap 3 theme for wordpress. Feel free to use this as a starter template for your projects.
+Author URI: http://3sparks.net/
+Description: This is a blank bootstrap 3.1.1 theme for wordpress. Feel free to use this as a starter template for your projects.
 Version: 1.0
 License: GNU General Public License v2 or later
 */
