--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ Author URI: http://3sparks.net/
 Description: This is a blank bootstrap 3.1.1 theme for wordpress. Feel free to use this as a starter template for your projects.
 Version: 1.0
 License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 /*Wordpress editor styles start*/
